# swagger_gen/models/exposure.go
@@ -1,0 +1,113 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag/jsonutils"
+	"github.com/go-openapi/swag/typeutils"
+	"github.com/go-openapi/validate"
+)
+
+// Exposure exposure
+//
+// swagger:model exposure
+type Exposure struct {
+
+	// entity context
+	EntityContext any `json:"entityContext,omitempty"`
+
+	// entity ID
+	// Required: true
+	EntityID *string `json:"entityID"`
+
+	// entity type
+	EntityType string `json:"entityType,omitempty"`
+
+	// flag ID
+	FlagID int64 `json:"flagID,omitempty"`
+
+	// flag key
+	FlagKey string `json:"flagKey,omitempty"`
+
+	// flag snapshot ID
+	FlagSnapshotID int64 `json:"flagSnapshotID,omitempty"`
+
+	// metadata
+	Metadata any `json:"metadata,omitempty"`
+
+	// timestamp
+	// Format: date-time
+	Timestamp strfmt.DateTime `json:"timestamp,omitempty"`
+
+	// variant ID
+	VariantID int64 `json:"variantID,omitempty"`
+
+	// variant key
+	VariantKey string `json:"variantKey,omitempty"`
+}
+
+// Validate validates this exposure
+func (m *Exposure) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEntityID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTimestamp(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Exposure) validateEntityID(formats strfmt.Registry) error {
+
+	if err := validate.Required("entityID", "body", m.EntityID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Exposure) validateTimestamp(formats strfmt.Registry) error {
+	if typeutils.IsZero(m.Timestamp) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("timestamp", "body", "date-time", m.Timestamp.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this exposure based on context it is used
+func (m *Exposure) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Exposure) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return jsonutils.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Exposure) UnmarshalBinary(b []byte) error {
+	var res Exposure
+	if err := jsonutils.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
