# swagger_gen/models/exposure_row_error.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag/jsonutils"
+)
+
+// ExposureRowError exposure row error
+//
+// swagger:model exposureRowError
+type ExposureRowError struct {
+
+	// index
+	Index int64 `json:"index,omitempty"`
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this exposure row error
+func (m *ExposureRowError) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this exposure row error based on context it is used
+func (m *ExposureRowError) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ExposureRowError) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return jsonutils.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ExposureRowError) UnmarshalBinary(b []byte) error {
+	var res ExposureRowError
+	if err := jsonutils.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
