# swagger_gen/models/exposures_request.go
@@ -1,0 +1,138 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+	stderrors "errors"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag/jsonutils"
+	"github.com/go-openapi/swag/typeutils"
+	"github.com/go-openapi/validate"
+)
+
+// ExposuresRequest exposures request
+//
+// swagger:model exposuresRequest
+type ExposuresRequest struct {
+
+	// exposures
+	// Required: true
+	// Min Items: 1
+	Exposures []*Exposure `json:"exposures"`
+}
+
+// Validate validates this exposures request
+func (m *ExposuresRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateExposures(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ExposuresRequest) validateExposures(formats strfmt.Registry) error {
+
+	if err := validate.Required("exposures", "body", m.Exposures); err != nil {
+		return err
+	}
+
+	iExposuresSize := int64(len(m.Exposures))
+
+	if err := validate.MinItems("exposures", "body", iExposuresSize, 1); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Exposures); i++ {
+		if typeutils.IsZero(m.Exposures[i]) { // not required
+			continue
+		}
+
+		if m.Exposures[i] != nil {
+			if err := m.Exposures[i].Validate(formats); err != nil {
+				ve := new(errors.Validation)
+				if stderrors.As(err, &ve) {
+					return ve.ValidateName("exposures" + "." + strconv.Itoa(i))
+				}
+				ce := new(errors.CompositeError)
+				if stderrors.As(err, &ce) {
+					return ce.ValidateName("exposures" + "." + strconv.Itoa(i))
+				}
+
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this exposures request based on the context it is used
+func (m *ExposuresRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateExposures(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ExposuresRequest) contextValidateExposures(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Exposures); i++ {
+
+		if m.Exposures[i] != nil {
+
+			if typeutils.IsZero(m.Exposures[i]) { // not required
+				return nil
+			}
+
+			if err := m.Exposures[i].ContextValidate(ctx, formats); err != nil {
+				ve := new(errors.Validation)
+				if stderrors.As(err, &ve) {
+					return ve.ValidateName("exposures" + "." + strconv.Itoa(i))
+				}
+				ce := new(errors.CompositeError)
+				if stderrors.As(err, &ce) {
+					return ce.ValidateName("exposures" + "." + strconv.Itoa(i))
+				}
+
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ExposuresRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return jsonutils.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ExposuresRequest) UnmarshalBinary(b []byte) error {
+	var res ExposuresRequest
+	if err := jsonutils.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
