# swagger_gen/restapi/operations/exposure/post_exposures_responses.go
@@ -1,0 +1,159 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package exposure
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+	"github.com/openflagr/flagr/swagger_gen/models"
+)
+
+// PostExposuresOKCode is the HTTP code returned for type PostExposuresOK
+const PostExposuresOKCode int = 200
+
+/*
+PostExposuresOK exposures accepted (partial success possible)
+
+swagger:response postExposuresOK
+*/
+type PostExposuresOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ExposuresResponse `json:"body,omitempty"`
+}
+
+// NewPostExposuresOK creates PostExposuresOK with default headers values
+func NewPostExposuresOK() *PostExposuresOK {
+
+	return &PostExposuresOK{}
+}
+
+// WithPayload adds the payload to the post exposures o k response
+func (o *PostExposuresOK) WithPayload(payload *models.ExposuresResponse) *PostExposuresOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post exposures o k response
+func (o *PostExposuresOK) SetPayload(payload *models.ExposuresResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostExposuresOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PostExposuresBadRequestCode is the HTTP code returned for type PostExposuresBadRequest
+const PostExposuresBadRequestCode int = 400
+
+/*
+PostExposuresBadRequest invalid request
+
+swagger:response postExposuresBadRequest
+*/
+type PostExposuresBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPostExposuresBadRequest creates PostExposuresBadRequest with default headers values
+func NewPostExposuresBadRequest() *PostExposuresBadRequest {
+
+	return &PostExposuresBadRequest{}
+}
+
+// WithPayload adds the payload to the post exposures bad request response
+func (o *PostExposuresBadRequest) WithPayload(payload *models.Error) *PostExposuresBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post exposures bad request response
+func (o *PostExposuresBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostExposuresBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+PostExposuresDefault generic error response
+
+swagger:response postExposuresDefault
+*/
+type PostExposuresDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPostExposuresDefault creates PostExposuresDefault with default headers values
+func NewPostExposuresDefault(code int) *PostExposuresDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostExposuresDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post exposures default response
+func (o *PostExposuresDefault) WithStatusCode(code int) *PostExposuresDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post exposures default response
+func (o *PostExposuresDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the post exposures default response
+func (o *PostExposuresDefault) WithPayload(payload *models.Error) *PostExposuresDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post exposures default response
+func (o *PostExposuresDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostExposuresDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
